Feature: added Delete Customer Endpoint and Handler, added confirmation modal, removed unused imports
