# sources/gui/Ggio.BikeSherpa.Frontend/infra/openAPI/swagger.json
@@ -144,6 +144,28 @@
       }
     },
     "/customer": {
+      "delete": {
+        "tags": [
+          "customer"
+        ],
+        "operationId": "DeleteCustomerEndpoint",
+        "responses": {
+          "204": {
+            "description": "No Content"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "403": {
+            "description": "Forbidden"
+          }
+        },
+        "security": [
+          {
+            "JWTBearerAuth": []
+          }
+        ]
+      },
       "post": {
         "tags": [
           "customer"
